# open-binancian-futures

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile-legacy  LICENSE  README.md  apitest.ipynb  changelog.skill  const.py  conventional-commits.skill  indicator.py  joshua.py  main.py  pyproject.toml  requirements.txt  run.sh  testnet.ipynb
.github/workflows/: pypi.yml
app/: __init__.py  main.py
app/backtest/: __init__.py
app/backtest/test_result/: __init__.py
app/core/: __init__.py
app/core/balance/: __init__.py
app/core/constant/: __init__.py
app/core/exchange_info/: __init__.py
app/core/indicator/: __init__.py
app/core/order/: __init__.py
app/core/position/: __init__.py
app/core/strategy/: __init__.py
app/utils/: __init__.py
backtest/: __init__.py
backtest/test_result/: __init__.py
common/: __init__.py
const/: __init__.py
core/: __init__.py  constants.py
core/balance/: __init__.py
core/order/: __init__.py
core/position/: __init__.py
indicator/: __init__.py
loggin/: __init__.py
open_binancian_futures/: __init__.py  __main__.py  ai.py  cli.py  client.py  constants.py  exchange.py  logging_config.py  models.py  runners.py  strategy.py  types.py  utils.py  webhook.py
src/: main.py
src/app/backtest/: __init__.py
src/app/backtest/test_result/: __init__.py
src/app/core/: __init__.py
src/app/core/balance/: __init__.py
src/app/core/constant/: __init__.py
src/app/logging/: __init__.py
src/app/openai/: __init__.py
src/app/utils/: __init__.py
src/app/webhook/: __init__.py  default_webhook.py  discord_webhook.py  slack_webhook.py
src/main/: .env.example  app.py
src/main/logging_config/: __init__.py
src/main/model/: container.py
src/main/openapi/: anthropic_messages.py  binance_futures.py  openai_response.py
src/main/runner/: __init__.py  backtesting.py  live_trading.py  test_result.py
src/main/strategy/: __init__.py  example.py
src/main/utils/: __init__.py
src/main/webhook/: __init__.py  default_webhook.py  discord_webhook.py  slack_webhook.py
utils/: __init__.py
(+23 files in other folders)
