[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-binancian-futures"
dynamic = ["version"]
description = "A robust framework for creating, backtesting, and deploying trading bots for Binance USDⓈ-M Futures"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HAN Sion", email = "its.zionhan@gmail.com"}
]
keywords = [
    "binance", "futures", "trading", "cryptocurrency",
    "algorithmic-trading", "backtesting", "trading-bot"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
requires-python = ">=3.12"

dependencies = [
    "binance-sdk-derivatives-trading-usds-futures>=6.2.0",
    "binance-common",
    "numpy<2.4",
    "pandas",
    "pandas-ta",
    "python-dotenv",
    "pydantic-settings>=2.0.0",
    "setuptools",
    "TA-Lib",
    "typer",
    # AI dependencies (formerly optional)
    "openai",
    "anthropic",
    "toon-format>=0.9.0b1",
    "tiktoken",
    # Webhook dependencies (formerly optional)
    "slack-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/zionhann/open-binancian-futures"
Repository = "https://github.com/zionhann/open-binancian-futures.git"
Issues = "https://github.com/zionhann/open-binancian-futures/issues"

[project.scripts]
open-binancian-futures = "open_binancian_futures.__main__:main"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
version = {attr = "open_binancian_futures.__version__"}

[tool.setuptools.package-data]
open_binancian_futures = ["py.typed"]
